[package]
name = "glapp"
version = "0.1.3"
edition = "2021"
description="GL context creation wrapper"
documentation = "https://docs.rs/glapp"
homepage = "https://github.com/limikael/glapp"
repository = "https://github.com/limikael/glapp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glapp-macros = {version="0.1.3", path="./glapp-macros"}
gl = "0.14.0"

# SDL deps
sdl2 = {version="0.35.2", optional=true}

# Glutin deps
glutin = {version="0.30.7", optional=true}
winit = {version="0.28.3", features=["android-native-activity"], optional=true}
glutin-winit = {version="0.3.0", optional=true}
raw-window-handle = {version="0.5.2", optional=true}

[target.'cfg(target_os="android")'.dependencies]
android_log-sys = "0.3.0"
libc = "0.2.141"

[features]
#default=["sdl"]
sdl=["dep:sdl2", "glapp-macros/sdl"]
glutin=["dep:glutin", "dep:winit", "dep:glutin-winit", "dep:raw-window-handle", "glapp-macros/glutin"]
#miniquad=["dep:miniquad", "appy-macros/miniquad"]
