[package]
name="glapp-macros"
version="0.1.1"
edition="2021"
description="Macros for glapp, a gl context creation wrapper"
documentation = "https://docs.rs/glapp"
homepage = "https://github.com/limikael/glapp"
repository = "https://github.com/limikael/glapp"
license = "MIT"

[lib]
proc-macro=true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = { version = "1", features = ["full"] }

[features]
sdl=[]
glutin=[]
#miniquad=[]
